@startuml
title Sustainable Packaging Service

<style>
group {
    BackgroundColor green
    LineStyle 5
    LineThickness 3
}
package {
    BackgroundColor palegreen
    LineStyle 2
    LineThickness 2
}

</style>


class ShipmentService {
  + findShipmentOption(Item, FulfillmentCenter) : ShipmentOption
}

class PackagingDAO {
  + findShipmentOptions(Item, FulfillmentCenter) : List<ShipmentOption>
}

class PackagingDatastore {
  + getFcPackagingOptions() : List<FcPackagingOption>
}

class Item {
  -asin: String
  -description: String
  -length: BigDecimal
  -width: BigDecimal
  -height: BigDecimal
}

class FulfillmentCenter {
  -fcCode: String
}

class ShipmentOption {
  -item: Item
  -packaging: Packaging
  -fulfillmentCenter: FulfillmentCenter
  + equals(Object)
  + hashCode()
}

class ShipmentCost {
  -shipmentOption: ShipmentOption
  -cost: BigDecimal
}

class Packaging {
  -material: Material
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

enum Material {
  + CORRUGATE
  + LAMINATED_PLASTIC
}

class FcPackagingOption {
  -fulfillmentCenter: FulfillmentCenter
  -packaging: Packaging
}

interface CostStrategy<<interface>> {
  +getCost(ShipmentOption): ShipmentCost
}

class MonetaryCostStrategy {}

class CarbonCostStrategy {}

class WeightedCostStrategy {}


class Box {
  -length: BigDecimal
  -width: BigDecimal
  -height: BigDecimal
}

class PolyBag {
  -length: BigDecimal
  -width: BigDecimal
  -height: BigDecimal
  -volume: BigDecimal
  -LAMINATED_PLASTIC: Material
}

ShipmentService o-- PackagingDAO
ShipmentService o- CostStrategy
PackagingDAO o-- FcPackagingOption
PackagingDAO <-- PackagingDatastore
FcPackagingOption o-- FulfillmentCenter
FcPackagingOption o-- Packaging
Packaging *- Material
ShipmentOption o-- Item
ShipmentOption o-- Packaging
ShipmentOption o-- FulfillmentCenter
CostStrategy o- ShipmentCost


CostStrategy <|.. MonetaryCostStrategy
CostStrategy <|.. CarbonCostStrategy

CostStrategy --* WeightedCostStrategy
CostStrategy <|.. WeightedCostStrategy

Box --|> Packaging
PolyBag --|> Packaging
@enduml
